feat - Activity of the member four - complete 6/6

--- a/post.html
+++ b/post.html
@@ -942,14 +942,98 @@
             <hr>
 
             <li>
-              <h4>
-                Describir uno de los Modelos revisados en clase, sobre el proceso de Planeación Estratégica.
-              </h4>
+              <h4>Chiavenato</h4>
               <p>
-
+                La planeación estratégica está constituida por los siguientes elementos:
               </p>
+              <ol>
+
+                <li>
+                  <b>Misión organizacional</b>
+                  <p>
+                    Es el elemento que traduce las responsabilidades y pretensiones de la
+                    organización en su entorno.
+                  </p>
+                </li>
+
+                <li>
+                  <b>Visión organizacional</b>
+                  <p>
+                    Muestra una imagen de la organización en cuanto a la realización de
+                    sus propósitos en el futuro
+                  </p>
+                </li>
+
+                <li>
+                  <b>Diagnóstico estratégico externo</b>
+                  <p>
+                    Busca anticipar oportunidades y amenazas a efecto de concretar la
+                    visión, la misión y los objetivos de la organización.
+                  </p>
+                </li>
+
+                <li>
+                  <b>Diagnóstico estratégico interno</b>
+                  <p>
+                    Diagnostica la situación de la organización frente a las dinámicas del
+                    entorno, relacionando sus fortalezas y debilidades a fin de crear las
+                    condiciones para formular estrategias que representan la mejor
+                    adaptación de la organización al entorno en el cual actúa.
+                  </p>
+                </li>
+
+                <li>
+                  <b>Determinantes del éxito</b>
+                  <p>
+                    Estas buscan evidenciar cuestiones realmente críticas para la
+                    organización, las cuales emergen de los elementos del análisis que se
+                    ha realizado.
+                  </p>
+                </li>
+
+                <li>
+                  <b>Definición de objetivos</b>
+                  <p>
+                    La organización persigue simultáneamente diferentes objetivos dentro
+                    de una jerarquía de grados de importancia, prioridad o urgencia.
+                  </p>
+                </li>
+
+                <li>
+                  <b>Formulación de estrategias</b>
+                  <p>
+                    A partir del análisis competitivo propuesto por Porter, el cual se
+                    compone de cinco fuerzas que actúan sobre la organización: el poder
+                    de negociación de los clientes y los proveedores, la amenaza de
+                    sustitutos y de nuevos competidores y la rivalidad de los competidores
+                    actuales. Por otra parte, Freeman considera que la formulación de las
+                    estrategias traduce la forma de relacionarse de la organización y de
+                    construir “puentes” entre ella y sus grupos de influencia (stakeholders),
+                    dice que las estrategias formuladas solo tendrán éxito si satisfacen las
+                    necesidades de esos grupos.
+                  </p>
+                </li>
+
+                <li>
+                  <b>Formalización del plan estratégico</b>
+                  <p>
+                    El plan estratégico es un plan de acción. Sin embargo, no basta con
+                    solo formular las estrategias para esa acción, sino que se deben
+                    implementar por medio de programas y proyectos específicos.
+                  </p>
+                </li>
+
+                <li>
+                  <b>Auditoría del desempeño y resultados (revaluación estratégica)</b>
+                  <p>
+                    Se trata de revisar lo que se ha implementado para decidir cuáles serán
+                    las nuevas direcciones del proceso, y de mantener las estrategias que
+                    han tenido éxito y enmendar las que han fracasado.
+                  </p>
+                </li>
+
+              </ol>
             </li>
-            <hr>
 
           </ul>
         </div>
