--- a/post.html
+++ b/post.html
@@ -238,16 +238,20 @@
                       <li>
                           ¿Cuál es la Misión y el objetivo de su empresa?:
                           <p>
-                              <i><b>Misión:</b></i>
+                              <i><b>Misión: Somos un equipo de alto desempeño que genera soluciones de software de forma innovadora y flexible, 
+                                con calidez en el trato, ganándonos la confianza de clientes y empresas </b></i>
                           </p>
                           <p>
-                              <i><b>Visión:</b></i>
+                              <i><b>Visión: Posicionarnos como la mejor opción de proveedor de servicios de tecnología en la nube para toda 
+                                la pequeña y mediana empresa a nivel nacional. Con productos confiables, sencillos, amigables y completos que 
+                                permitan a nuestros clientes transformar su negocio haciéndolos más rentables y productivos.</b></i>
                           </p>
                       </li>
                       <li>
                           ¿Se ha realizado un análisis FODA? ¿Cuál es la mayor fortaleza de la empresa?:
                           <p>
-                              <i><b>Jefe de desarrollo y mantenimiento de software.</b></i>
+                              <i><b>Si, la mayor fortaleza con la que contamos es con la experiencia y con los años que tenemos en el mercado, ya 
+                                que despues de tantos años, tenemos un conocimiento amplio en diferentes tipos de empresas.</b></i>
                           </p>
                       </li>
                       <li>
@@ -715,6 +719,358 @@
           </div>
         </div>
       </div>
+    </article>
+
+    <!-- Post Content-->
+    <article class="mb-4 border-top" id="post5">
+        <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+            <h2 class="section-heading">Antología de Planeación Estratégica y Habilidades Directivas</h2>
+            <hr>
+            <ul>
+                <li>
+                <h4>¿Qué es una estrategia de Negocio?</h4>
+                <p>Es el proceso mediante el cual la
+                    organización define de manera más específica el éxito, en el contexto del lo(s)
+                    negocio(s) en que desea participar, cómo se medirá ese éxito, qué se debe hacer
+                    para lograrlo y qué tipo de cultura organizacional se necesita con el fín de
+                    alcanzarlo, mientras continúe existiendo una relación directa entre el mencionado
+                    diseño y la nueva declaración de la misión.
+                </p>
+                </li>
+                <hr>
+
+                <li>
+                <h4>¿Cuáles son los 4 factores o acciones para el diseño de una estrategia de negocio?</h4>
+                <p>
+                    El diseño de la estrategia del negocio requiere establecer los
+                    objetivos cuantificados de la organización. El proceso respectivo consiste en
+                    cuatro acciones importantes:
+                </p>
+                <ol>
+                    <li>
+                    <p>
+                        Identifica las principales líneas de negocio (LDN) o el perfil estratégico que
+                        desarrollará la compañía para cumplir su misión.
+                    </p>
+                    </li>
+
+                    <li>
+                    <p>
+                        Establecer los indicadores críticos del éxito (ICE), los cuales posibilitarán
+                        que la organización registre su proceso en cada LDN que intente seguir.
+                    </p>
+                    </li>
+
+                    <li>
+                    <p>
+                        Identificar las acciones estratégicas mediante las cuales la empresa logrará
+                        su visión de la condición futura ideal. Las acciones estratégicas son metas
+                        organizacionales que no son ni LDN ni ICE para evaluar esas metas
+                        aunque, por lo general, dichas acciones estratégicas pueden ejercer
+                        impacto en las LDN y, con frecuencia, son rastreables por parte de los ICE,
+                        ejemplos de acciones estratégicas incluyen el desarrollo de un proceso de
+                        administración de la calidad total, la creación de un departamento de los
+                        recursos humanos en pleno funcionamiento y la instalación de un sistema
+                        de inventario en punto de venta.
+                    </p>
+                    </li>
+
+                    <li>
+                    <p>
+                        Determinar la cultura necesaria para apoyar estas LDN, los ICE y las acciones estratégicas
+                    </p>
+                    </li>
+
+                </ol>
+                <p>
+                    Cada una de estas cuatro acciones se debe determinar y analizar en
+                    forma independiente durante las siguientes dos fases de la
+                    planeación estratégica aplicada (es decir, auditoría del desempeño y
+                    análisis de brechas) y, donde sea necesario, retomar y revisar antes
+                    de desplazarse a la siguiente acción.
+                </p>
+                </li>
+                <hr>
+
+                <li>
+                <h4>
+                    Características de las estrategias:
+                </h4>
+                <ol>
+                    <li>
+                    <b>Horizonte temporal</b>
+                    <p>
+                        La palabra estrategia se emplea para describir actividades que comprenden un amplio horizonte de
+                        tiempo, en relación con planeación Estratégica y Habilidades Directivas el tiempo que se tarda en
+                        efectuarlas y que se tarda en observar su impacto.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Final</b>
+                    <p>
+                        Pese a que las consecuencias de seguir una estrategia determinada
+                        tal vez no sean evidentes durante mucho tiempo, su impacto final será importante.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Concentración de esfuerzo</b>
+                    <p>
+                        Una estrategia eficaz por lo general suele equerir concentrar la actividad, esfuerzo o atención en
+                        un número bastante reducido de fines.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Patrón de decisiones</b>
+                    <p>
+                        Aunque algunas compañías necesitan hacer sólo
+                        algunas decisiones importantes a fin de poner en práctica su estrategia
+                        seleccionada, la mayor parte de las estrategias exigen que ciertos tipos de
+                        decisión sean tomados con el tiempo. Esas decisiones han de apoyarse
+                        entre sí.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Capacidad de penetración</b>
+                    <p>
+                        Una estrategia engloba un amplio espectro de
+                        actividades, las cuales incluyen desde los procesos de asignación de
+                        recursos hasta las operaciones diarias.
+                    </p>
+                    </li>
+
+                </ol>
+                </li>
+                <hr>
+
+                <li>
+                <h4>
+                    ¿Qué es una estrategia empresarial?
+                </h4>
+                <p>
+                    Cuando una empresa opera en múltiples sectores industriales y regiones geográficas, es fundamental que
+                    primero se defina la estrategia a nivel corporativo antes de abordar las estrategias individuales de sus
+                    unidades de negocio. Esto asegura la coherencia de las estrategias de las unidades con la estrategia
+                    global de la organización.
+                </p>
+
+                <img alt="matrix-BCG" src="./assets/img/matrix-BCG.png">
+
+                <p>
+                    La matriz del BCG atiende a dos variables: en el eje de la Y se mide el
+                    crecimiento del sector industrial desde bajo hasta alto, y en el eje de la X se mide
+                    la participación relativa en el mercado desde baja hasta alta. Lo que da por
+                    resultado la matriz en donde se clasifican las distintas empresas del corporativo
+                </p>
+
+                <ol>
+                    <li>
+                    <b>Estrellas</b>
+                    <p>
+                        Las unidades estratégicas de los negocios o productos que
+                        tienen gran participación en un mercado de crecimiento rápido. Las estrellas
+                        generan efectivo pues una
+                        gran participación en el mercado suele acompañarse de una considerable
+                        rentabilidad.
+                        También usan mucho efectivo pues deben gastar más recursos que destinan a la
+                        expansión
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Vacas productoras de efectivo</b>
+                    <p>
+                        Tienen una fuerte participación pero en un mercado con baja tasa de crecimiento.
+                        En consecuencia, aunque generan efectivo no lo usan todo.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Interrogantes</b>
+                    <p>
+                        Por su participación en un mercado con una alta tasa de
+                        crecimiento, necesitan efectivo si quieren competir. Pero como tienen poca
+                        participación en el mercado, no hay la seguridad de que con grandes gastos
+                        consigan conquistar una participación mayor
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Perros</b>
+                    <p>
+                        Tiene poca participación en el mercado y, por lo mismo, genera
+                        menos efectivo del que necesita para sobrevivir. Puesto que también se encuentra
+                        en un mercado de escaso crecimiento, no es candidato atractivo para invertir en él.
+                    </p>
+                    </li>
+
+
+                </ol>
+                <p>
+                    El primer paso en la administración del portafolio o cartera de los productos
+                    o negocios consiste en identificar las estrellas, las vacas productoras de efectivo,
+                    los interrogantes y los perros.
+                </p>
+                </li>
+                <hr>
+
+                <li>
+                <h4>
+                    ¿Qué es una estrategia funcional?
+                </h4>
+                <p>
+                    Así como se define una estrategia para un grupo empresarial y para cada
+                    una de las empresas que lo integran, se debe establecerse una
+                    estrategia específica para cada una de las funciones o áreas clave que integran la
+                    empresa en particular.
+                </p>
+                <ol>
+                    <li>
+                    <b>Estrategia:</b>
+                    <p>
+                        Se enfatiza la importancia de desarrollar estrategias específicas para cada una
+                        de las funciones o áreas clave de una empresa. Estas áreas incluyen finanzas, producción,
+                        recursos humanos, mercadotecnia, logística, calidad, innovación, sistemas de información,
+                        entre otras. Estas estrategias funcionales se diseñan teniendo en cuenta la interrelación con otras
+                        áreas.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Coherencia con la Estrategia Empresarial:</b>
+                    <p>
+                        Las estrategias funcionales deben estar alineadas con la estrategia empresarial de la organización.
+                        Deben contribuir y ser coherentes con los objetivos generales de la empresa.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Planificación a Corto Plazo:</b>
+                    <p>
+                        Una vez definidas las estrategias funcionales, se utilizan para la toma de decisiones a corto plazo,
+                        que se integran en los planes anuales o de menor tiempo. Esto implica la elaboración de planes
+                        operacionales con detalles específicos de actividades y el uso de herramientas para su
+                        implementación.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Implantación de la Estrategia:</b>
+                    <p>
+                        La implantación de las estrategias requiere el compromiso total de la alta dirección de la empresa.
+                        Se destaca la importancia del liderazgo transformacional, que involucra a los ejecutivos en la
+                        aplicación de cambios y fomenta la apropiación de los objetivos e ideales de la empresa por parte de
+                        los empleados.
+                    </p>
+                    </li>
+
+                </ol>
+                </li>
+                <hr>
+
+                <li>
+                <h4>Chiavenato</h4>
+                <p>
+                    La planeación estratégica está constituida por los siguientes elementos:
+                </p>
+                <ol>
+
+                    <li>
+                    <b>Misión organizacional</b>
+                    <p>
+                        Es el elemento que traduce las responsabilidades y pretensiones de la
+                        organización en su entorno.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Visión organizacional</b>
+                    <p>
+                        Muestra una imagen de la organización en cuanto a la realización de
+                        sus propósitos en el futuro
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Diagnóstico estratégico externo</b>
+                    <p>
+                        Busca anticipar oportunidades y amenazas a efecto de concretar la
+                        visión, la misión y los objetivos de la organización.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Diagnóstico estratégico interno</b>
+                    <p>
+                        Diagnostica la situación de la organización frente a las dinámicas del
+                        entorno, relacionando sus fortalezas y debilidades a fin de crear las
+                        condiciones para formular estrategias que representan la mejor
+                        adaptación de la organización al entorno en el cual actúa.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Determinantes del éxito</b>
+                    <p>
+                        Estas buscan evidenciar cuestiones realmente críticas para la
+                        organización, las cuales emergen de los elementos del análisis que se
+                        ha realizado.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Definición de objetivos</b>
+                    <p>
+                        La organización persigue simultáneamente diferentes objetivos dentro
+                        de una jerarquía de grados de importancia, prioridad o urgencia.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Formulación de estrategias</b>
+                    <p>
+                        A partir del análisis competitivo propuesto por Porter, el cual se
+                        compone de cinco fuerzas que actúan sobre la organización: el poder
+                        de negociación de los clientes y los proveedores, la amenaza de
+                        sustitutos y de nuevos competidores y la rivalidad de los competidores
+                        actuales. Por otra parte, Freeman considera que la formulación de las
+                        estrategias traduce la forma de relacionarse de la organización y de
+                        construir “puentes” entre ella y sus grupos de influencia (stakeholders),
+                        dice que las estrategias formuladas solo tendrán éxito si satisfacen las
+                        necesidades de esos grupos.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Formalización del plan estratégico</b>
+                    <p>
+                        El plan estratégico es un plan de acción. Sin embargo, no basta con
+                        solo formular las estrategias para esa acción, sino que se deben
+                        implementar por medio de programas y proyectos específicos.
+                    </p>
+                    </li>
+
+                    <li>
+                    <b>Auditoría del desempeño y resultados (revaluación estratégica)</b>
+                    <p>
+                        Se trata de revisar lo que se ha implementado para decidir cuáles serán
+                        las nuevas direcciones del proceso, y de mantener las estrategias que
+                        han tenido éxito y enmendar las que han fracasado.
+                    </p>
+                    </li>
+
+                </ol>
+                </li>
+
+            </ul>
+            </div>
+        </div>
+        </div>
     </article>
 
     <!-- Post Content-->
